--- a/src/components/HeaderNav/style.less
+++ b/src/components/HeaderNav/style.less
@@ -31,6 +31,7 @@
             font-size: 14px !important;
             font-weight: normal;
             border: none;
+            color:black !important;
         }
     }
 }
